--- a/visitUsGeo.html
+++ b/visitUsGeo.html
@@ -528,4 +528,5 @@
             setTimeout(carousel, 3000); // Change image every 2 seconds
         }
     </script>
-</body></html>
+</body>
+</html>
