Man skal huske &oslash;

--- a/visitUsGeo.html
+++ b/visitUsGeo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Besøg Geomuseet Faxe</title>
+    <title>Bes&oslash;g Geomuseet Faxe</title>
     <meta name="description" content="Geomuseet Faxe ved Stevns Klint. Besøget i kalkbruddet kan med fordel indgå i forløb i naturgeografi og biologi og er velegnet til tværfaglige forløb" />
     <meta name="keywords" content="Fossiljagt, undervisning  i naturgeografi og biologi, Stevns Klint, UNESCO Verdensarv, Kalklandet" />
     <meta name="author" content="Charlotte Fuchs" />
