--- a/stevns_museum.html
+++ b/stevns_museum.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="robots" content="noindex, follow" />
+    <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geomuseet Faxe</title>
-    <meta name="description" content="Geomuseet Faxe. En del af Unesco's verdensarv. Kom helt tæt på livet for 66 millioner år siden, da en kæmpe astoride udrydede mange arter og gemte dem i kridtet" />
-    <meta name="keywords" content="Stevns Klint, UNESCO Verdensarv, Kalklandet, undervisnning samfundsfag og geologi" />
+    <title>Stevns Klint</title>
+    <meta name="description" content="Det er smukt på Stevns Klint og tættere på end du tror. Læs mere her" />
+    <meta name="keywords" content="Fossiljagt, undervisning  i naturgeografi og biologi, Stevns Klint, UNESCO Verdensarv, Kalklandet" />
     <meta name="author" content="Charlotte Fuchs" />
 
     <link rel="stylesheet" type="text/css" href="css/grid.css" />
@@ -15,25 +15,43 @@
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <style>
-        /* flag p undersider */
-        div.flag_inner {
-            display: block;
+        /* intern nav */
+        .page-nav {
+            background-color: #628ca1;
+            margin-top: -5px;
         }
 
-        /* Wrapper */
-
-        .page-nav ul li a {
-            text-decoration: none;
-            color: #796d65;
-            ;
-        }
 
         .page-nav a.active {
-            background-color: #fff;
-            color: #ec7f44;
+            background-color: #ec7f44;
+            color: #FFF;
             cursor: default;
         }
 
+        .page-nav a:hover {
+
+            background-color: #317793;
+            color: #FFF;
+
+        }
+
+        .page-nav ul li a {
+
+            text-decoration: none;
+            padding: inherit;
+            color: #ec7f44;
+            width: inherit;
+            padding: 0 10px;
+            padding-bottom: 0px;
+            padding-bottom: 0px;
+            padding-bottom: 10px;
+
+        }
+
+        .link_white {
+            color: #FFF;
+
+        }
 
         #splash {
             display: none !important;
@@ -61,47 +79,27 @@
             display: block;
         }
 
-        /* frontend grid */
-        h3.frontGrid-item:nth-child(3) {
+        .footerFloat ul {
             text-align: center;
+            padding-left: 25%;
         }
 
-        section.indhold {
+        /* pagesGrid */
+        .frontGrid-item img {
+            text-align: center;
+            margin: 0 auto;
+            width: 100%;
+        }
+
+        .pagesGrid-item-container {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-            font-size: 16px;
         }
 
-        h1.pagesGrid-item(1) {
+        div.pagesGrid-item:nth-child(1) {
             grid-column: 1 / 7;
             grid-row: 1 / 2;
-            background-color: #ec7f44;
-            margin: 0;
-            padding-top: 15px;
-            padding-bottom: 10px;
-        }
-
-        .grid-item:nth-child(2) {
-            grid-column: 1/ 3;
-            grid-row: 2 / 3;
-        }
-
-        .grid-item:nth-child(4) {
-            grid-column: 3/ 6;
-            grid-row: 2 / 5;
-            max-width: 80%;
-        }
-
-        .grid-item:nth-child(3) {
-            grid-column: 1/ 3;
-            grid-row: 3 / 4;
-        }
-
-        .grid-item:nth-child(5) {
-            grid-column: 6 /7;
-            grid-row: 2/ 5;
-            border-left: 4px solid #EC7F44;
-            min-width: 200px;
+            padding: 0;
         }
 
         div.pagesGrid-item:nth-child(2) {
@@ -110,256 +108,198 @@
             padding: 0;
         }
 
-        .pagesGrid-item:nth-child(3) {
+        div.pagesGrid-item:nth-child(3) {
             grid-column: 1 /6;
             grid-row: 3/ 4;
         }
 
-        .pagesGrid-item:nth-child(6) {
-            grid-column: 6/ 7;
-            grid-row: 3/ 5;
-            border-left: 4px solid #EC7F44;
-            padding: 1em;
-            min-width: 200px;
+        div.pagesGrid-item:nth-child(4) {
+            grid-column: 1 / 3;
+            grid-row: 4/ 5;
         }
 
-        div.frontGrid-item:nth-child(3) {
+        div.pagesGrid-item:nth-child(5) {
+            grid-column: 3/ 6;
+            grid-row: 4/ 5;
+        }
+
+        div.pagesGrid-item:nth-child(6) {
             grid-column: 1/ 6;
-            grid-row: 3 / 4;
-        }
-
-        div.frontGrid-item:nth-child(4) {
-            grid-column: 1/ 6;
-            grid-row: 4 / 5;
-        }
-
-        div.frontGrid-item:nth-child(5) {
-            grid-column: 1/3;
             grid-row: 5/ 6;
         }
 
-        div.frontGrid-item:nth-child(6) {
-            grid-column: 3 /6;
-            grid-row: 5 / 6;
-        }
-
-        div.frontGrid-item:nth-child(7) {
-            grid-column: 1/3;
-            grid-row: 6 / 7;
-        }
-
-        div.frontGrid-item:nth-child(8) {
-            grid-column: 6 / 7;
-            grid-row: 3 / 4;
+        div.pagesGrid-item:nth-child(7) {
+            grid-column: 6/ 7;
+            grid-row: 3/ 6;
             border-left: 4px solid #EC7F44;
         }
 
-        div.frontGrid-item:nth-child(9) {
-            grid-column: 6 / 7;
-            grid-row: 4 / 6;
-            border-left: 4px solid #EC7F44;
+        div.pagesGrid-item {
+            padding: 8px;
+            font-size: 16px;
+            text-align: left;
         }
 
-        div.frontGrid-item:nth-child(10) {
-            grid-column: 1 / 7;
-            grid-row: 8 / 9;
-            border-left: 4px solid #EC7F44;
+        div.pagesGrid-item {
+            padding: 2em;
         }
 
-        /* grid style */
-
-        h1.frontGrid-item {
-            font-size: 28px;
+        img.pagesGrid-item {
             text-align: center;
+            margin: 0 auto;
         }
 
+        /* pagesGrid max 809px*/
         @media screen and (max-width: 809px) {
-            article.kalk {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                padding-top: 30px;
 
-            }
-
-            .grid-item {
-                width: 50%;
-                height: auto;
-                grid-template-rows: 1fr 1fr;
-            }
-
-            .grid-item:nth-child(1) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-            }
-
-            .grid-item:nth-child(2) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
+            /*  .footerFloat ul {
+    text-align: center;
+    padding: 0;
+}*/
+            div.splashHeader img {
                 width: 100%;
-                margin: 0 auto;
-                text-align: center;
+                max-height: 500px;
+                overflow: hidden;
+                padding-top: 10px;
             }
 
-            .grid-item:nth-child(3) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                width: 100%;
-                margin: 0 auto;
-                padding: 2em;
-            }
-
-            .grid-item:nth-child(4) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                width: 100%;
-            }
-
-            .grid-item:nth-child(5) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                width: 80%;
-                text-align: center;
-                padding-top: 1em;
-                border-left: none;
-            }
-
-            /* frontend grid*/
             section.indhold {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
+                padding-bottom: 0px;
             }
 
-            .frontGrid-item-container {
+            div.pagesGrid-item-container {
                 height: auto;
                 width: 50%;
-
             }
 
-            div.frontGrid-item {
-                width: 100%;
-                height: auto;
-                grid-template-rows: 1fr 1fr;
-            }
-
-            h1.frontGrid-item:nth-child(1) {
-                grid-column: 1 / 3;
+            div.pagesGrid-item:nth-child(1) {
+                grid-column: 1 / 7;
                 grid-row: span 1;
                 width: 100%;
             }
 
-            div.frontGrid-item:nth-child(2) {
-                grid-column: 1 / 3;
+            div.pagesGrid-item:nth-child(2) {
+                grid-column: 1 / 7;
+                grid-row: span 1;
+                width: 100%;
+            }
+
+            div.pagesGrid-item:nth-child(3) {
+                grid-column: 1 /7;
                 grid-row: span 1;
             }
 
-            div.frontGrid-item:nth-child(3) {
-                grid-column: 1 / 3;
+            div.pagesGrid-item:nth-child(4) {
+                grid-column: 1/ 2;
                 grid-row: span 1;
             }
 
-            div.frontGrid-item:nth-child(4) {
-                grid-column: 1 / 2;
-                grid-row: span 1;
-            }
-
-            div.frontGrid-item:nth-child(5) {
+            div.pagesGrid-item:nth-child(5) {
                 grid-column: 2 / 3;
                 grid-row: span 1;
-            }
-
-            div.frontGrid-item:nth-child(6) {
-                grid-column: 1 / 2;
-                grid-row: span 1;
-            }
-
-            div.frontGrid-item:nth-child(7) {
-                grid-column: 2 / 3;
-                grid-row: span 1;
-            }
-
-            div.frontGrid-item:nth-child(8) {
+                text-align: center;
                 border-left: none;
-                grid-column: 1 / 2;
-                grid-row: span 1;
             }
 
-            div.frontGrid-item:nth-child(9) {
-                border-left: none;
-                grid-column: 2 / 3;
+            div.pagesGrid-item:nth-child(6) {
+                grid-column: 1 / 7;
                 grid-row: span 1;
+                border-left: none;
+                text-align: center;
             }
+
+            div.pagesGrid-item:nth-child(7) {
+                grid-column: 1 / 7;
+                grid-row: span 1;
+                border-left: none;
+                text-align: center;
+
+            }
+
+            iframe {
+                max-width: 80%;
+            }
+
         }
 
         @media all and (max-width: 575px) {
+            div.splashHeader img {
+                width: 100%;
+                height: 200px;
+                overflow: hidden;
+                padding-top: 10px;
+            }
+
+            section.indhold {
+                background-color: white;
+                display: grid;
+                grid-template-columns: 1fr;
+                padding-bottom: 0px;
+            }
+
+            div.pagesGrid-item-container {
+                display: grid;
+                width: 100%;
+                padding-top: 10px;
+            }
+
+            div.pagesGrid-item:nth-child(1) {
+                grid-column: 1 / 3;
+                grid-row: span 1;
+            }
+
+            div.pagesGrid-item:nth-child(2) {
+                grid-column: 1 / 3;
+                grid-row: span 1;
+            }
+
+            div.pagesGrid-item:nth-child(3) {
+                grid-column: 1 /3;
+                grid-row: span 1;
+            }
+
+            div.pagesGrid-item:nth-child(4) {
+                grid-column: 1 / 3;
+                grid-row: span 1;
+                margin: 0 auto;
+            }
+
+            div.pagesGrid-item:nth-child(5) {
+                grid-column: 1 / 3;
+                grid-row: span 1;
+            }
+
+            div.pagesGrid-item:nth-child(6) {
+                grid-column: 1 / 3;
+                grid-row: span 1;
+            }
+
+            div.pagesGrid-item:nth-child(7) {
+                grid-column: 1 / 3;
+                grid-row: span 1;
+                border-left: none;
+
+            }
+
+            div.pagesGrid-item {
+                width: 100%;
+            }
+
+            img.pagesGrid-item {
+                text-align: center;
+                margin: 0 auto;
+            }
+
+            .footerFloat ul {
+                text-align: center;
+                padding-left: 20%;
+            }
+
             div.footerFloat {
                 width: 100% !important;
                 text-align: center;
-            }
-
-            .frontGrid-item-container {
-                display: grid;
-                grid-template-columns: 1fr;
-                padding-top: 30px;
-
-            }
-
-            div.frontGrid-item {
-                width: 100%;
-                height: auto;
-                grid-template-rows: 1fr;
-            }
-
-            h1.frontGrid-item:nth-child(1) {
-                grid-column: 1 / 3;
-                grid-row: 1 / 2;
-            }
-
-            div.frontGrid-item:nth-child(2) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-            }
-
-            div.frontGrid-item:nth-child(3) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                text-align: left;
-            }
-
-            div.frontGrid-item:nth-child(4) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                text-align: center;
-            }
-
-            div.frontGrid-item:nth-child(5) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                text-align: left;
-            }
-
-            div.frontGrid-item:nth-child(6) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-            }
-
-            div.frontGrid-item:nth-child(7) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                text-align: center;
-            }
-
-            div.frontGrid-item:nth-child(8) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                text-align: center;
-                border-left: none;
-            }
-
-            div.frontGrid-item:nth-child(9) {
-                grid-column: 1 / 3;
-                grid-row: span 1;
-                text-align: center;
-                border-left: none;
             }
         }
     </style>
@@ -459,27 +399,14 @@
             </div><!-- flag -->
         </header>
     </div><!-- /container -->
-
     <div class="area-wrapper">
         <main class="kalken">
             <h1 class="overskrift" class="pagesGrid-item"></h1>
-            <section class="indhold" class="pagesGrid-item-container">
-
-            </section>
+            <section class="indhold" class="pagesGrid-item-container"></section>
             <section class="kalken" class="pagesGrid-item">
 
             </section>
         </main>
-        <!--indhold-->
-        <template>
-            <article class="kalk">
-                <h2 class="grid-item"></h2>
-                <h3 class="grid-item"></h3>
-                <p class="grid-item"></p>
-                <img class="grid-item" class="billede" src="" alt="" />
-                <div class="grid-item"></div>
-            </article>
-        </template>
     </div>
 
     <!-- Footer -->
@@ -554,7 +481,7 @@
         }
 
         async function hentJson1() {
-            let url = "http://medicinolie.dk/kalklandet/wordpress/wp-json/wp/v2/kalkenpages/89";
+            let url = "http://medicinolie.dk/kalklandet/wordpress/wp-json/wp/v2/kalklandet/126";
             let jsonData = await fetch(url);
             indhold = await jsonData.json();
             console.log(indhold);
